create summary route
